--- a/style/slides.scss
+++ b/style/slides.scss
@@ -1,16 +1,13 @@
 /*-- scss:defaults --*/
 
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Space+Grotesk:wght@300..700&display=swap');
 
-
-$font-family-sans-serif: "Atkinson Hyperlegible", sans-serif;
-$font-family-monospace: "Source Code Pro", monospace;
-$presentation-heading-color: #7A9857;
-$link-color: #7A9857;
-$code-color: #7A9857;
+$font-family-sans-serif: "Space Grotesk", sans-serif;
+$font-family-monospace: "Inconsolata", monospace;
+$presentation-heading-color: #D95127;
+$link-color: #FF75EF;
+$code-color: #D95127;
 $code-block-font-size: 0.7em;
 $presentation-h2-font-size: 1.4em !default;
 $presentation-font-size-root: 36px !default;
@@ -22,11 +19,11 @@ details>summary {
 }
 
 #title-slide .title {
-  color: #7A9857;
+  color: #D95127;
 }
 
 #title-slide .subtitle {
-  color: #7A9857;
+  color: #D95127;
   font-weight: bold;
 }
 
