remove python image from python box

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -118,7 +118,7 @@ details>summary {
   margin-top: 6px;
   border-left: solid 5px #5482B0;
   background: #FADF6F50 center no-repeat;
-  background-image: url("../../../../images/python-logo.png");
+  # background-image: url("../../../../images/python-logo.png");
   background-position: 0.5em 0.5em;
   background-size: 50px;
 }
