--- a/style/slides.scss
+++ b/style/slides.scss
@@ -127,7 +127,7 @@ details>summary {
   padding: 0.5em 1em 0.5em 2.5em;
   margin-bottom: 6px;
   margin-top: 6px;
-  border-left: solid 5px #797979;
+  border-left: solid 5px #2F1DF5;
   background: #79797950 center no-repeat;
   background-image: url("../../../../images/code-icon.png");
   background-position: 0.5em 0.5em;
