Edit setup page

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -97,8 +97,8 @@ details>summary {
   padding-bottom: 3px;
   margin-bottom: 6px;
   margin-top: 6px;
-  border-left: solid 5px #FF70C6;
-  background-color: #FF76FA;
+  border-left: solid 5px #FF75EF;
+  background-color: #FF75EF;
 }
 
 .reveal .slide .r-box {
