Add to intro slides

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -71,12 +71,12 @@ details>summary {
 .reveal .hand-blue-large {
   font-family: 'Montserrat';
   font-weight: 900;
-  color: #FFF;
+  color: #000;
   font-size: 1.2em
 }
 
 .reveal .hand-green {
-  font-family: 'Satisfy', cursive;
+  font-family: 'Montserrat';
   color: #48A098;
 }
 
