edit code style in your turns

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -89,6 +89,9 @@ details>summary {
   margin-top: 6px;
   border-left: solid 5px #D95127;
   background-color: #FF6349;
+  code {
+    color: #36454F;
+  };
 }
 
 .reveal .slide .our-turn {
